--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -4,11 +4,12 @@
 		<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 	</ul>
 	<div class="copyright">
-		<a href="http://pastingio.blogspot.com.ar/">TECH BLOG</a>
+		<a href="https://www.npmjs.com/package/pasting">GET PASTING CLI</a></br>
+		BETA VERSION
 		<ul class="menu">
 			<li><a href="/">PASTING.IO</a></li>
-			<li>&copy; JSCLOUD. All rights reserved.</li>
-			<li><a href="/team">OUR TEAM</a></li>
+			<li>&copy; JS. All rights reserved.</li>
+			<li><a href="http://pastingio.blogspot.com.ar" target="_blank">TECH BLOG</a></li>
 		</ul>
 	</div>
 </section>
