--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -2,17 +2,10 @@
 	<i class="icon-pasting-logo"></i>
 	<header>
 		<p>Paste and share text or code. Simple, fast and free</p>
-		<div class="center pasteBox" title="Press CONTROL+V on your keyboard to paste a text from your clipboard'" id="pasteBox">
-		 	<p>PRESS <span class="olights" id="cmd">CONTROL</span> + <span class="olights">V</span></span> </p>
-		</div>
+		<a href="#mainFeatures" class="scrolly"><span class="olights"> VIEW FEATURES </span></a>
 	</header>
 	<footer>
 		<a href="#" class="button login" id="loginButtonHead">Login </a>
-		<a href="#pasteText" class="button scrolly" id="pastingButton">Sign Up</a>
+		<a href="#pasteText" class="button scrolly" id="signUp">Sign Up</a>
 	</footer>
-
-	<br/>
-	
-	<a href="#mainFeatures" class="featureFlag scrolly"><i class="fa fa-chevron-down fa-5"></i></a>
-
 </section>
