--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -1,17 +1,7 @@
 <div class="myGrandHead"> 
-
-	<i class="icon-pasting-logo"></i>
-
-	<nav style="display:none;" class="navlogout"> 
-		<a href="/logout" class="logout">Logout</a>
+	<a href="/"><i class="icon-pasting-logo"></i></a>
+	<nav class="navmenu"> 
+		<a href="/logout" class="logout" style="display:none">Logout</a>
+		<a href="#" class="login" style="display:none">Login</a>
 	</nav>
-
-	<nav style="display:none;" class="navcreate"> 
-		<a href="#" class="create">New Paste</a>
-	</nav>
-
-	<nav style="display:none;" class="navlogin"> 
-		<a href="#" class="login">Login</a>
-	</nav>
-
 </div>
