--- a/app/templates/pastingConsole.html
+++ b/app/templates/pastingConsole.html
@@ -1,6 +1,5 @@
 <!-- pastingConsole -->
 <section id="pastingConsole" class="main">
-
 	<header>
 		<div class="container">
 			<h2>GET PASTING FOR YOUR CONSOLE </h2>
@@ -8,8 +7,7 @@
 			You can share directly from your console. <a href="#">[Watch video]</a></p>
 		</div>
 	</header>
-
-	<div class="content dark style1 featured" style="background: linear-gradient(45deg, #243FAB, #3F79A3, #1E2337);">
+	<div class="content dark style1 featured" style="">
 		<div class="container">
 			<div class="row">
 				<div class="container">
@@ -19,10 +17,10 @@
 					<h2>Configure your Pasting.io credentials </h2>
 					<p style="background-color: rgba(0, 0, 0, 0.64);"> pasting -u yourUsername -p yourPassword </p>
 
-					<h2>Create your first pasting </h2>
+					<h2>Create your first Pasting </h2>
 					<p style="background-color: rgba(0, 0, 0, 0.64);;"> echo "Mi first pasting" | pasting </p>
 
-					<h2>Advanced pasting? Use the pipe and do all you've ever dreamt! </h2>
+					<h2>Advanced Pasting? Use the pipe and do all you've ever dreamt! </h2>
 					<p style="background-color: rgba(0, 0, 0, 0.64);"> ls -la | pasting </p>
 				</div>
 		</div>
