--- a/app/templates/pastingFeatures.html
+++ b/app/templates/pastingFeatures.html
@@ -15,7 +15,7 @@
 						<header>
 							<h3>Cloud & Real Time </h3>
 						</header>
-						<p>You can create a customized URL with your username which will be your Pasting Cloud. This will be available anytime, anywhere.</p>
+						<p>You can create a customized URL with your username which will be your Pasting Cloud. This will be available anytime, anywhere. <a href="#">Get Pasting View</a> for Mobile</p>
 					</section>
 				</div>
 				<div class="4u">
@@ -47,8 +47,8 @@
 			<div class="row">
 				<div class="12u">
 					<footer>
-						<a href="#" class="button login" id="loginButtonHead">Login !</a>
-						<a href="#pasteText" class="button scrolly" id="pastingButton">Sign Up</a>
+						<a href="#" class="button login" id="loginButtonHead">Login </a>
+						<a href="#pasteText" class="button scrolly" id="signUp">Sign Up</a>
 					</footer>
 				</div>
 			</div>
