--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -57,7 +57,7 @@
 	width: 100%;
 	height: 55px;
 	color: white;
-	background-color: rgba(66, 104, 162, 1);
+	background-color: rgba(66, 104, 162, 0.92);
 	z-index: 99;
 	box-shadow: 0px 0px 15px white;
 	padding: 10px 20px 10px 20px;
@@ -68,7 +68,7 @@
 }
 
 .myGrandHead i.icon-pasting-logo {
-	font-size: 33px;
+	font-size: 35px;
 	float: left;
 	display: inline-block;
 }
@@ -96,3 +96,35 @@
 	font-size: 30px;
 }
 
+.float-button {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  width: 30px;
+  padding: 30px;
+  font-size: 30px;
+  background: rgba(36, 84, 158, 0.8);
+  position: fixed;
+  bottom: 20px; /* Adjust to where you want it */
+  right: 20px; /* Adjust to where you want it */
+  z-index: 9999;
+}
+
+.float-button .height_fix {
+  margin-top: 100%;
+}
+
+.float-button .content {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  margin-top: -16px;
+  color: white;
+}
+
+.navmenu {
+	margin-top: 3px;
+}
