remove feature mobile desc

--- a/app/templates/pastingFeatures.html
+++ b/app/templates/pastingFeatures.html
@@ -15,7 +15,7 @@
 						<header>
 							<h3>Cloud & Real Time </h3>
 						</header>
-						<p>You can create a customized URL with your username which will be your Pasting Cloud. This will be available anytime, anywhere. <a href="#">Get Pasting View</a> for Mobile</p>
+						<p>You can create a customized URL with your username which will be your Pasting Cloud. This will be available anytime, anywhere.
 					</section>
 				</div>
 				<div class="4u">
