--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -4,10 +4,13 @@
 		<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 	</ul>
 	<div class="copyright">
-		<a href="https://www.npmjs.com/package/pasting">GET PASTING CLI</a></br>
-		BETA VERSION
 		<ul class="menu">
-			<li><a href="/">PASTING.IO</a></li>
+			<li><a href="/landing/#cli">PASTING CLI</a> </li>
+		 	<li><a href="/landing/#viewer">PASTING VIEWER</a> </li>
+		</ul>
+
+		<ul class="menu">
+			<li><a href="/landing/">PASTING.IO</a></li>
 			<li>&copy; JS. All rights reserved.</li>
 			<li><a href="http://pastingio.blogspot.com.ar" target="_blank">TECH BLOG</a></li>
 		</ul>
