--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -57,7 +57,8 @@
 	width: 100%;
 	height: 55px;
 	color: white;
-	background-color: rgba(66, 104, 162, 0.92);
+	/*background-color: rgba(66, 104, 162, 0.92); */
+	background-color: rgba(29, 65, 126, 0.89);
 	z-index: 99;
 	box-shadow: 0px 0px 15px white;
 	padding: 10px 20px 10px 20px;
@@ -103,7 +104,7 @@
   width: 30px;
   padding: 30px;
   font-size: 30px;
-  background: rgba(36, 84, 158, 0.8);
+  background: rgba(29, 65, 126, 0.89);
   position: fixed;
   bottom: 20px; /* Adjust to where you want it */
   right: 20px; /* Adjust to where you want it */
@@ -127,4 +128,20 @@
 
 .navmenu {
 	margin-top: 3px;
+}
+
+div .pastingBlock {
+	background: rgb(35, 35, 36);
+	border-radius: 3px;
+	color: rgb(200, 200, 200);
+	font-family: monospace;
+	font-size: 13px;
+	font-weight: 100;
+}
+
+
+div .pastingBlock:hover {
+	background: rgb(255, 255, 255);
+	color: black;
+	cursor: pointer;
 }
