--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -57,8 +57,7 @@
 	width: 100%;
 	height: 55px;
 	color: white;
-	/*background-color: rgba(66, 104, 162, 0.92); */
-	background-color: rgba(29, 65, 126, 0.89);
+	background-color:  rgba(52, 84, 119, 0.99);
 	z-index: 99;
 	box-shadow: 0px 0px 15px white;
 	padding: 10px 20px 10px 20px;
@@ -104,7 +103,7 @@
   width: 30px;
   padding: 30px;
   font-size: 30px;
-  background: rgba(29, 65, 126, 0.89);
+  background:  rgba(52, 84, 119, 0.99);
   position: fixed;
   bottom: 20px; /* Adjust to where you want it */
   right: 20px; /* Adjust to where you want it */
@@ -131,17 +130,16 @@
 }
 
 div .pastingBlock {
-	background: rgb(35, 35, 36);
-	border-radius: 3px;
-	color: rgb(200, 200, 200);
-	font-family: monospace;
-	font-size: 13px;
-	font-weight: 100;
+	background: rgb(239, 239, 239);
+  	border-radius: 4px;
+  	color:  rgba(52, 84, 119, 0.99);
+  	font-family: monospace;
+  	font-size: 13px;
+  	font-weight: 100;
 }
 
-
 div .pastingBlock:hover {
-	background: rgb(255, 255, 255);
-	color: black;
+	background: rgba(52, 84, 119, 0.99);
+	color: white;
 	cursor: pointer;
 }
