--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -2,6 +2,8 @@
 	<ul class="icons">
 		<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 		<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+		<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+		<li><a href="#" class="icon fa-google-plus"><span class="label">Google Plus</span></a></li>
 	</ul>
 	<div class="copyright">
 		<ul class="menu">
