--- a/app/templates/userPublic.html
+++ b/app/templates/userPublic.html
@@ -1,10 +1,7 @@
 <section class="main">
-	<header>
+	<header style="height: 90px;">
 		<div class="container">
-			<h2>pasting.io/<%= obj.user %></h2>
-			<p></p>
-			<ul class="menu" id="defaultMenu"></ul>
-			<pre id="textArea"></pre>
+			<h2 style="margin-top: 4px;">pasting.io/<%= obj.user %></h2>
 		</div>
 	</header>
 </section>
