ps version 2.0 improvements

--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -12,9 +12,8 @@
 		</ul>
 
 		<ul class="menu">
-			<li><a href="/landing/">PASTING.IO</a></li>
-			<li>&copy; JS. All rights reserved.</li>
-			<li><a href="http://pastingio.blogspot.com.ar" target="_blank">TECH BLOG</a></li>
+			<li>&copy; 2015 <a href="/landing/">PASTING.IO</a></li>
+			<li>JS. All Rights Reserved</li>
 		</ul>
 	</div>
 </section>
