--- a/app/assets/css/vex-theme-default.css
+++ b/app/assets/css/vex-theme-default.css
@@ -476,7 +476,7 @@
 }
 /* line 116, ../sass/vex-theme-default.sass */
 .vex.vex-theme-default .vex-dialog-button.vex-dialog-button-primary {
-  background:  rgba(52, 84, 119, 0.99);
+  background: #125FB6;
   color: white;
 }
 /* line 120, ../sass/vex-theme-default.sass */
