New version of higlight code

--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -150,3 +150,11 @@ span.truncate {
  	overflow: hidden;
  	text-overflow: ellipsis;
 }
+
+.hljs {
+  text-align: left;
+  font-size: 14px;
+  line-height: 18px;
+  padding: 15px;
+  padding-left: 20px;
+}
