--- a/app/templates/documentPublic.html
+++ b/app/templates/documentPublic.html
@@ -4,7 +4,7 @@
 			<h2 style="margin-top: 8px;">pasting.io/<%= obj.user %>/<%= obj.documentId %></h2>
 			<p></p>
 			<ul class="menu" id="defaultMenu"></ul>
-			<pre><code id="highlightText"></code></pre>
+			<pre><code id="highlightText" class="javascript"></code></pre>
 		</div>
 	</header>
 </section>
