--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -93,18 +93,21 @@
 	font-size: 30px;
 }
 
+
+
 .float-button {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
   width: 30px;
   padding: 30px;
-  font-size: 30px;
+  font-size: 13px;
   background:  #125FB6;
   position: fixed;
-  bottom: 20px; /* Adjust to where you want it */
-  right: 20px; /* Adjust to where you want it */
+  bottom: 30px; /* Adjust to where you want it */
+  right: 30px; /* Adjust to where you want it */
   z-index: 9999;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 .float-button .height_fix {
@@ -114,7 +117,7 @@
 .float-button .content {
   position: absolute;
   left: 0;
-  top: 50%;
+  top: 58%;
   height: 100%;
   width: 100%;
   text-align: center;
@@ -126,30 +129,6 @@
 	margin-top: 3px;
 }
 
-div.pastingBlock {
-	font-size: 13px;
-	font-weight: 100;
-  	-webkit-box-shadow: 0 3px 10px rgba(0,0,0,.3);
-  	box-shadow: 0 3px 10px rgba(0,0,0,.3);
-  	background: #fff;
-  	border-left: 5px solid #125FB6;
-	padding: 20px 80px 20px 40px; 
-	text-align: left;
-	text-decoration: none;
-	color: #7b8087;
-	cursor: pointer;
-}
-
-div.pastingBlock:hover {
-	background: rgba(0, 0, 0, 0.02);
-	cursor: pointer;
-}
-
-span.truncate {
-	white-space: nowrap;
- 	overflow: hidden;
- 	text-overflow: ellipsis;
-}
 
 .hljs {
   text-align: left;
@@ -169,4 +148,43 @@ span.truncate {
 }
 
 
+.pasteBlock .button {
+	display: inline-block;
+	position: relative;
+	line-height: 32px;
+	border-radius: 2px;
+	font-size: 0.9em;
+	color: #646464;
+}
 
+.pasteBlock {
+	color: black;
+	cursor: pointer;
+	position: relative;
+	display: inline-block;
+	width: 100%;
+	vertical-align: top;
+	text-align: left;
+	background-color: #fff;
+	box-shadow: 0 3px 10px rgba(0,0,0,.3);
+  	font-weight: 100;
+}
+
+.pasteBlock {
+	border-left: 4px solid #125FB6;
+	box-sizing: border-box;
+	padding: 20px 80px 20px 40px;
+
+}
+
+.pasteBlock > .content {
+	font-size: 0.9em;
+}
+
+.pasteBlock > .button {
+	width: 90px;
+	float: right;
+	font-size: 0.8em;
+	color: #125FB6;
+	border: 0px;
+}
