New api for extension

--- a/app/templates/pastesTable.html
+++ b/app/templates/pastesTable.html
@@ -14,11 +14,11 @@
 
 							if ("1" == paste.protected) {
 								var copyUrl		= obj.baseUrl + "/p/" + paste.id + "/" + paste.public_password;
-						    	var copyLabel	= "COPY LINK";
+						    	var copyLabel	= "COPY";
 						    	var rawUrl 		= obj.apiUrl + "/raw/" + paste.id + "/" + paste.public_password;
 							} else {
 								var copyUrl		= obj.baseUrl + "/p/" + paste.id;
-						    	var copyLabel	= "COPY LINK";
+						    	var copyLabel	= "COPY";
 						    	var rawUrl 		= obj.apiUrl + "/raw/" + paste.id;
 							}
 						%>
