--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -7,6 +7,7 @@
 	</ul>
 	<div class="copyright">
 		<ul class="menu">
+			<li><a href="https://chrome.google.com/webstore/detail/pasting/eigmjmdnfggdmfkhkiofedljpbcghkgp">PASTING EXTENSION</a> </li>
 			<li><a href="/landing/#cli">PASTING CLI</a> </li>
 		 	<li><a href="/landing/#viewer">PASTING VIEWER</a> </li>
 		</ul>
