--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -2,11 +2,13 @@
 	<ul class="icons">
 		<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 		<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-		<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+		<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 		<li><a href="#" class="icon fa-google-plus"><span class="label">Google Plus</span></a></li>
+		-->
 	</ul>
 	<div class="copyright">
 		<ul class="menu">
+			<li><a href="/live">PASTING LIVE</a> </li>
 			<li><a href="https://chrome.google.com/webstore/detail/pasting/eigmjmdnfggdmfkhkiofedljpbcghkgp">PASTING EXTENSION</a> </li>
 			<li><a href="/landing/#cli">PASTING CLI</a> </li>
 		 	<li><a href="/landing/#viewer">PASTING VIEWER</a> </li>
@@ -14,7 +16,7 @@
 
 		<ul class="menu">
 			<li>&copy; 2015 <a href="/landing/">PASTING.IO</a></li>
-			<li>JS. All Rights Reserved</li>
+			<li><a href="https://represent.io/juansanzone">JS</a>. All Rights Reserved</li>
 		</ul>
 	</div>
 </section>
